[[bin]]
name = 'substrate-poa'
path = 'src/main.rs'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '3dea3be10e2a635879c6532605716bc4c34d98b0'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '3dea3be10e2a635879c6532605716bc4c34d98b0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '3dea3be10e2a635879c6532605716bc4c34d98b0'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '3dea3be10e2a635879c6532605716bc4c34d98b0'

[dependencies.substrate-poa-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '3dea3be10e2a635879c6532605716bc4c34d98b0'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '3dea3be10e2a635879c6532605716bc4c34d98b0'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '3dea3be10e2a635879c6532605716bc4c34d98b0'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '3dea3be10e2a635879c6532605716bc4c34d98b0'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '3dea3be10e2a635879c6532605716bc4c34d98b0'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '3dea3be10e2a635879c6532605716bc4c34d98b0'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '3dea3be10e2a635879c6532605716bc4c34d98b0'

[build-dependencies]
vergen = '3'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'substrate-poa'
version = '1.0.0'
[profile.release]
panic = 'unwind'
