[features]
default = []
std = ['substrate-poa-runtime/std']

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-poa-runtime-wasm'
version = '1.0.0'

[workspace]
members = []
[dependencies.substrate-poa-runtime]
default-features = false
path = '..'
[profile.release]
lto = true
panic = 'abort'

[lib]
crate-type = ['cdylib']
